Implementions/PyImpl/Parser/libs/pscriptParser.py
# Generated from ./pscriptParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

if "." in __name__:
    from .pscriptParserBase import pscriptParserBase
else:
    from pscriptParserBase import pscriptParserBase


class pscriptParser ( pscriptParserBase ):

    grammarFileName = "pscriptParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'def'", "'return'", "'raise'", "'from'", "<INVALID>", 
                     "'nonlocal'", "'as'", "'global'", "'assert'", "'if'", 
                     "'elif'", "'else'", "'while'", "'for'", "'in'", "'try'", 
                     "<INVALID>", "'finally'", "'with'", "'except'", "'lambda'", 
                     "'or'", "'and'", "'not'", "'is'", "'class'", "'yield'", 
                     "'del'", "'pass'", "'continue'", "'break'", "'async'", 
                     "'await'", "'exec'", "<INVALID>", "<INVALID>", "'var'", 
                     "'const'", "'let'", "'.'", "'`'", "'*'", "','", "':'", 
                     "';'", "'**'", "'='", "'|'", "'^'", "'&'", "'<<'", 
                     "'>>'", "'+'", "'-'", "'/'", "'%'", "'//'", "'~'", 
                     "'<'", "'>'", "'=='", "'>='", "'<='", "'<>'", "'!='", 
                     "'@'", "'->'", "'+='", "'-='", "'*='", "'/='", "'%='", 
                     "'^='", "'**='", "'//='", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "LINE_BREAK", "DEF", 
                      "RETURN", "RAISE", "FROM", "IMPORT", "NONLOCAL", "AS", 
                      "GLOBAL", "ASSERT", "IF", "ELIF", "ELSE", "WHILE", 
                      "FOR", "IN", "TRY", "NONE", "FINALLY", "WITH", "EXCEPT", 
                      "LAMBDA", "OR", "AND", "NOT", "IS", "CLASS", "YIELD", 
                      "DEL", "PASS", "CONTINUE", "BREAK", "ASYNC", "AWAIT", 
                      "EXEC", "TRUE", "FALSE", "VAR", "CONST", "LET", "DOT", 
                      "REVERSE_QUOTE", "STAR", "COMMA", "COLON", "SEMI_COLON", 
                      "POWER", "ASSIGN", "OR_OP", "XOR", "AND_OP", "LEFT_SHIFT", 
                      "RIGHT_SHIFT", "ADD", "MINUS", "DIV", "MOD", "IDIV", 
                      "NOT_OP", "LESS_THAN", "GREATER_THAN", "EQUALS", "GT_EQ", 
                      "LT_EQ", "NOT_EQ_1", "NOT_EQ_2", "AT", "ARROW", "ADD_ASSIGN", 
                      "SUB_ASSIGN", "MULT_ASSIGN", "DIV_ASSIGN", "MOD_ASSIGN", 
                      "XOR_ASSIGN", "POWER_ASSIGN", "IDIV_ASSIGN", "STRING", 
                      "DECIMAL_INTEGER", "OCT_INTEGER", "HEX_INTEGER", "BIN_INTEGER", 
                      "IMAG_NUMBER", "FLOAT_NUMBER", "OPEN_PAREN", "CLOSE_PAREN", 
                      "OPEN_BRACE", "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "NAME", "LINE_JOIN", "NEWLINE", "WS", "TRAILING_SPACES", 
                      "COMMENT", "ML_COMMENT" ]

    RULE_root = 0
    RULE_single_input = 1
    RULE_file_input = 2
    RULE_eval_input = 3
    RULE_stmt = 4
    RULE_compound_stmt = 5
    RULE_suite = 6
    RULE_decorator = 7
    RULE_elif_clause = 8
    RULE_else_clause = 9
    RULE_finally_clause = 10
    RULE_with_item = 11
    RULE_except_clause = 12
    RULE_classdef = 13
    RULE_funcdef = 14
    RULE_typedargslist = 15
    RULE_args = 16
    RULE_kwargs = 17
    RULE_def_parameters = 18
    RULE_def_parameter = 19
    RULE_named_parameter = 20
    RULE_simple_stmt = 21
    RULE_small_stmt = 22
    RULE_variable_def = 23
    RULE_variable_def_name = 24
    RULE_variable_def_comma_name = 25
    RULE_from_where = 26
    RULE_comma_name = 27
    RULE_comma_test = 28
    RULE_variable_def_consts = 29
    RULE_variable_def_consts_with_colon = 30
    RULE_testlist_star_expr = 31
    RULE_star_expr = 32
    RULE_assign_part = 33
    RULE_exprlist = 34
    RULE_import_as_names = 35
    RULE_import_as_name = 36
    RULE_name_as_names = 37
    RULE_name_as_name = 38
    RULE_test = 39
    RULE_varargslist = 40
    RULE_vardef_parameters = 41
    RULE_vardef_parameter = 42
    RULE_varargs = 43
    RULE_varkwargs = 44
    RULE_logical_test = 45
    RULE_comparison = 46
    RULE_expr = 47
    RULE_atom = 48
    RULE_dictmaker = 49
    RULE_dictItem = 50
    RULE_dictKey = 51
    RULE_setmaker = 52
    RULE_testlist = 53
    RULE_dotted_name = 54
    RULE_name = 55
    RULE_bool = 56
    RULE_number = 57
    RULE_integer = 58
    RULE_yield_expr = 59
    RULE_yield_arg = 60
    RULE_trailer = 61
    RULE_arguments = 62
    RULE_arglist = 63
    RULE_argument = 64
    RULE_subscriptlist = 65
    RULE_subscript = 66
    RULE_sliceop = 67
    RULE_comp_for = 68
    RULE_comp_iter = 69

    ruleNames =  [ "root", "single_input", "file_input", "eval_input", "stmt", 
                   "compound_stmt", "suite", "decorator", "elif_clause", 
                   "else_clause", "finally_clause", "with_item", "except_clause", 
                   "classdef", "funcdef", "typedargslist", "args", "kwargs", 
                   "def_parameters", "def_parameter", "named_parameter", 
                   "simple_stmt", "small_stmt", "variable_def", "variable_def_name", 
                   "variable_def_comma_name", "from_where", "comma_name", 
                   "comma_test", "variable_def_consts", "variable_def_consts_with_colon", 
                   "testlist_star_expr", "star_expr", "assign_part", "exprlist", 
                   "import_as_names", "import_as_name", "name_as_names", 
                   "name_as_name", "test", "varargslist", "vardef_parameters", 
                   "vardef_parameter", "varargs", "varkwargs", "logical_test", 
                   "comparison", "expr", "atom", "dictmaker", "dictItem", 
                   "dictKey", "setmaker", "testlist", "dotted_name", "name", 
                   "bool", "number", "integer", "yield_expr", "yield_arg", 
                   "trailer", "arguments", "arglist", "argument", "subscriptlist", 
                   "subscript", "sliceop", "comp_for", "comp_iter" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    LINE_BREAK=3
    DEF=4
    RETURN=5
    RAISE=6
    FROM=7
    IMPORT=8
    NONLOCAL=9
    AS=10
    GLOBAL=11
    ASSERT=12
    IF=13
    ELIF=14
    ELSE=15
    WHILE=16
    FOR=17
    IN=18
    TRY=19
    NONE=20
    FINALLY=21
    WITH=22
    EXCEPT=23
    LAMBDA=24
    OR=25
    AND=26
    NOT=27
    IS=28
    CLASS=29
    YIELD=30
    DEL=31
    PASS=32
    CONTINUE=33
    BREAK=34
    ASYNC=35
    AWAIT=36
    EXEC=37
    TRUE=38
    FALSE=39
    VAR=40
    CONST=41
    LET=42
    DOT=43
    REVERSE_QUOTE=44
    STAR=45
    COMMA=46
    COLON=47
    SEMI_COLON=48
    POWER=49
    ASSIGN=50
    OR_OP=51
    XOR=52
    AND_OP=53
    LEFT_SHIFT=54
    RIGHT_SHIFT=55
    ADD=56
    MINUS=57
    DIV=58
    MOD=59
    IDIV=60
    NOT_OP=61
    LESS_THAN=62
    GREATER_THAN=63
    EQUALS=64
    GT_EQ=65
    LT_EQ=66
    NOT_EQ_1=67
    NOT_EQ_2=68
    AT=69
    ARROW=70
    ADD_ASSIGN=71
    SUB_ASSIGN=72
    MULT_ASSIGN=73
    DIV_ASSIGN=74
    MOD_ASSIGN=75
    XOR_ASSIGN=76
    POWER_ASSIGN=77
    IDIV_ASSIGN=78
    STRING=79
    DECIMAL_INTEGER=80
    OCT_INTEGER=81
    HEX_INTEGER=82
    BIN_INTEGER=83
    IMAG_NUMBER=84
    FLOAT_NUMBER=85
    OPEN_PAREN=86
    CLOSE_PAREN=87
    OPEN_BRACE=88
    CLOSE_BRACE=89
    OPEN_BRACKET=90
    CLOSE_BRACKET=91
    NAME=92
    LINE_JOIN=93
    NEWLINE=94
    WS=95
    TRAILING_SPACES=96
    COMMENT=97
    ML_COMMENT=98

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(pscriptParser.EOF, 0)

        def file_input(self):
            return self.getTypedRuleContext(pscriptParser.File_inputContext,0)


        def eval_input(self):
            return self.getTypedRuleContext(pscriptParser.Eval_inputContext,0)


        def getRuleIndex(self):
            return pscriptParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = pscriptParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 140
                self.file_input()

            elif la_ == 2:
                self.state = 141
                self.eval_input()


            self.state = 144
            self.match(pscriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINE_BREAK(self):
            return self.getToken(pscriptParser.LINE_BREAK, 0)

        def simple_stmt(self):
            return self.getTypedRuleContext(pscriptParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(pscriptParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return pscriptParser.RULE_single_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_input" ):
                listener.enterSingle_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_input" ):
                listener.exitSingle_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_input" ):
                return visitor.visitSingle_input(self)
            else:
                return visitor.visitChildren(self)




    def single_input(self):

        localctx = pscriptParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_single_input)
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(pscriptParser.LINE_BREAK)
                pass
            elif token in [5, 6, 7, 8, 9, 11, 12, 20, 30, 31, 32, 33, 34, 36, 38, 39, 40, 41, 42, 44, 57, 79, 80, 81, 82, 83, 84, 85, 86, 88, 90, 92]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.simple_stmt()
                pass
            elif token in [4, 13, 16, 17, 19, 22, 29, 35, 69]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.compound_stmt()
                self.state = 149
                self.match(pscriptParser.LINE_BREAK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class File_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LINE_BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(pscriptParser.LINE_BREAK)
            else:
                return self.getToken(pscriptParser.LINE_BREAK, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pscriptParser.StmtContext)
            else:
                return self.getTypedRuleContext(pscriptParser.StmtContext,i)


        def single_input(self):
            return self.getTypedRuleContext(pscriptParser.Single_inputContext,0)


        def getRuleIndex(self):
            return pscriptParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = pscriptParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 155 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 155
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [3]:
                        self.state = 153
                        self.match(pscriptParser.LINE_BREAK)
                        pass
                    elif token in [4, 5, 6, 7, 8, 9, 11, 12, 13, 16, 17, 19, 20, 22, 29, 30, 31, 32, 33, 34, 35, 36, 38, 39, 40, 41, 42, 44, 57, 69, 79, 80, 81, 82, 83, 84, 85, 86, 88, 90, 92]:
                        self.state = 154
                        self.stmt()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 157 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 144141438385077240) != 0) or ((((_la - 69)) & ~0x3f) == 0 and ((1 << (_la - 69)) & 11271169) != 0)):
                        break

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.single_input()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Eval_inputContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(pscriptParser.TestlistContext,0)


        def LINE_BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(pscriptParser.LINE_BREAK)
            else:
                return self.getToken(pscriptParser.LINE_BREAK, i)

        def getRuleIndex(self):
            return pscriptParser.RULE_eval_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEval_input" ):
                listener.enterEval_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEval_input" ):
                listener.exitEval_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEval_input" ):
                return visitor.visitEval_input(self)
            else:
                return visitor.visitChildren(self)




    def eval_input(self):

        localctx = pscriptParser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_eval_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.testlist()
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 163
                self.match(pscriptParser.LINE_BREAK)
                self.state = 168
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(pscriptParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(pscriptParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return pscriptParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = pscriptParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_stmt)
        try:
            self.state = 171
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 7, 8, 9, 11, 12, 20, 30, 31, 32, 33, 34, 36, 38, 39, 40, 41, 42, 44, 57, 79, 80, 81, 82, 83, 84, 85, 86, 88, 90, 92]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.simple_stmt()
                pass
            elif token in [4, 13, 16, 17, 19, 22, 29, 35, 69]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pscriptParser.RULE_compound_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class While_stmtContext(Compound_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pscriptParser.Compound_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(pscriptParser.WHILE, 0)
        def test(self):
            return self.getTypedRuleContext(pscriptParser.TestContext,0)

        def COLON(self):
            return self.getToken(pscriptParser.COLON, 0)
        def suite(self):
            return self.getTypedRuleContext(pscriptParser.SuiteContext,0)

        def else_clause(self):
            return self.getTypedRuleContext(pscriptParser.Else_clauseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_stmt" ):
                listener.enterWhile_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_stmt" ):
                listener.exitWhile_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_stmt" ):
                return visitor.visitWhile_stmt(self)
            else:
                return visitor.visitChildren(self)


    class Func_def_stmtContext(Compound_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pscriptParser.Compound_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def funcdef(self):
            return self.getTypedRuleContext(pscriptParser.FuncdefContext,0)

        def decorator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pscriptParser.DecoratorContext)
            else:
                return self.getTypedRuleContext(pscriptParser.DecoratorContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_def_stmt" ):
                listener.enterFunc_def_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_def_stmt" ):
                listener.exitFunc_def_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_def_stmt" ):
                return visitor.visitFunc_def_stmt(self)
            else:
                return visitor.visitChildren(self)


    class Try_stmtContext(Compound_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pscriptParser.Compound_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRY(self):
            return self.getToken(pscriptParser.TRY, 0)
        def COLON(self):
            return self.getToken(pscriptParser.COLON, 0)
        def suite(self):
            return self.getTypedRuleContext(pscriptParser.SuiteContext,0)

        def finally_clause(self):
            return self.getTypedRuleContext(pscriptParser.Finally_clauseContext,0)
